--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.initialization-mode=always
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql = true
+spring.jpa.show-sql=false
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.data=classpath:db_init.sql
 
